# -QueryPad

./: .gitignore  LICENSE  README.md  pyproject.toml
ml_data/: learned_patterns.json  model_stats.json  query_history.jsonl
src/querypad/: __init__.py  __main__.py  ai.py  database.py  ml_local.py  notebook.py  server.py
src/querypad/static/: app.js  index.html  style.css
tests/: test_database.py  test_notebook.py  test_server.py
