[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "querypad"
version = "0.1.0"
description = "SQL notebook with AI assistant — query any database using natural language"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "QueryPad Contributors" }]
keywords = ["sql", "notebook", "ai", "database", "llm", "natural-language"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "pandas>=2.0",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
postgres = ["psycopg2-binary>=2.9"]
mysql = ["pymysql>=1.1"]
anthropic = ["anthropic>=0.30"]
openai = ["openai>=1.30"]

[project.scripts]
querypad = "querypad.__main__:main"

[project.urls]
Homepage = "https://github.com/yourname/querypad"
Repository = "https://github.com/yourname/querypad"
Issues = "https://github.com/yourname/querypad/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/querypad"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
